--- a/Portfolio-1/index.html
+++ b/Portfolio-1/index.html
@@ -50,7 +50,7 @@
     <section class="about" id="about">
         <h2 class="heading"> About <span>Me</span></h2>
         <div class="about-img">
-            <img src="img/about.jpg" alt="">
+            <img src="./img/about.jpg" alt="">
             <span class="circle-spin"></span>
         </div>
         <div class="about-content">
