--- a/Portfolio-2/index.html
+++ b/Portfolio-2/index.html
@@ -28,7 +28,7 @@
 
     </header>
     <section class="home" id="home">
-        <div class="home">
+        <div class="home-content">
             <h1>Hii, It's <span>Mark</span></h1>
             <h3> I'm a <span>Web Developer</span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero iste quasi illum nam, inventore eum
@@ -38,7 +38,7 @@
             <div class="social-icons">
                 <a href="#">
                     <i class='bx bxl-github'></i>
-                 </a>
+                </a>
 
                 <a href="#">
                     <i class='bx bxl-linkedin-square'> </i>
@@ -61,11 +61,180 @@
 
         </div>
         <div class="home-img">
-            <img src="./img/image.png" alt="">
+            <img src="./img/image1.png" alt="">
         </div>
 
     </section>
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="./img/image1.png" alt="">
+        </div>
+        <div class="about-content">
+            <h1>About <span>Me</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo illum commodi enim ullam tenetur voluptate
+                optio, voluptatem obcaecati id quibusdam odio natus harum esse blanditiis officia perferendis.
+                Perferendis, assumenda consectetur!</p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
 
+    <section class="services" id="services">
+        <h2 class="heading">Services</h2>
+        <div class="services-container">
+
+            <div class="services-box">
+                <div class="service-info">
+                    <i class='bx bxl-figma'></i>
+                    <h4>UI / UX Design </h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam suscipit ullam molestiae
+                        ratione ab aut et similique distinctio error iure.</p>
+                </div>
+            </div>
+
+
+
+            <div class="services-box">
+                <div class="service-info">
+                    <i class='bx bx-expand-horizontal'></i>
+                    <h4>Frontend Developer </h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam suscipit ullam molestiae
+                        ratione ab aut et similique distinctio error iure.</p>
+                </div>
+            </div>
+
+            <div class="services-box">
+                <div class="service-info">
+                    <i class='bx bx-code-curly'></i>
+                    <h4>Backend Developer </h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam suscipit ullam molestiae
+                        ratione ab aut et similique distinctio error iure.</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+
+    <!-- Project  -->
+    <section class="projects" id="projects">
+        <h2 class="heading">Projects</h2>
+        <div class="projects-box">
+            <div class="project-card">
+                <img src="./img/p-1.png" alt="">
+                <h3>Project 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat porro ipsum cupiditate quidem
+                    aliquid quas, in nesciunt vel maiores est?</p>
+                <div class="btn">Review Project</div>
+            </div>
+
+            <div class="project-card">
+                <img src="./img/p-2.png" alt="">
+                <h3>Project 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat porro ipsum cupiditate quidem
+                    aliquid quas, in nesciunt vel maiores est?</p>
+                <div class="btn">Review Project</div>
+            </div>
+
+            <div class="project-card">
+                <img src="./img/p-3.png" alt="">
+                <h3>Project 3</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat porro ipsum cupiditate quidem
+                    aliquid quas, in nesciunt vel maiores est?</p>
+                <div class="btn">Review Project</div>
+            </div>
+
+            <div class="project-card">
+                <img src="./img/p-4.png" alt="">
+                <h3>Project 4</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat porro ipsum cupiditate quidem
+                    aliquid quas, in nesciunt vel maiores est?</p>
+                <div class="btn">Review Project</div>
+            </div>
+
+            <div class="project-card">
+                <img src="./img/p-5.png" alt="">
+                <h3>Project 5</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat porro ipsum cupiditate quidem
+                    aliquid quas, in nesciunt vel maiores est?</p>
+                <div class="btn">Review Project</div>
+            </div>
+
+            <div class="project-card">
+                <img src="./img/p-6.png" alt="">
+                <h3>Project 6</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat porro ipsum cupiditate quidem
+                    aliquid quas, in nesciunt vel maiores est?</p>
+                <div class="btn">Review Project</div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact  -->
+    <section class="contact" id="contact">
+        <h2 class="heading">
+            Contact <span>Me</span>
+        </h2>
+        <form action="#">
+            <div class="input-group">
+                <div class="input-box">
+                    <input type="text" placeholder="Full Name">
+                    <input type="email" placeholder="Your Mail">
+                </div>
+                <div class="input-box">
+                    <input type="number" placeholder="Ph No">
+                    <input type="text" placeholder="Subject">
+                </div>
+
+            </div>
+            <div class="input-group-2">
+                <textarea name="" id="" placeholder="Your Message" cols="30" rows="10"></textarea>
+                <input type="submit" value="Send Message" class="btn">
+
+            </div>
+
+        </form>
+    </section>
+
+    <!-- footer  -->
+
+
+    <footer class="footer">
+
+
+        <div class="social-icons">
+            <a href="#">
+                <i class='bx bxl-github'></i>
+            </a>
+
+            <a href="#">
+                <i class='bx bxl-linkedin-square'> </i>
+            </a>
+
+            <a href="#">
+                <i class='bx bxl-instagram-alt'> </i>
+            </a>
+
+            <a href="#">
+                <i class='bx bxl-twitter'> </i>
+            </a>
+        </div>
+        <ul class="list">
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#servuices">Servies</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <p class="copyright">
+            @Rajashree | All Rights Reserved
+        </p>
+
+
+
+    </footer>
+
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
