--- a/Portfolio-2/index.html
+++ b/Portfolio-2/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <a href="#home" class="logo">
-            Mark <span>Gray</span>
+            Raja<span>Shree</span>
         </a>
         <i class='bx bx-menu' id="menu-icon"> </i>
         <nav class="navbar">
@@ -29,7 +29,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-content">
-            <h1>Hii, It's <span>Mark</span></h1>
+            <h1>Hi, It's <span>Rajashree</span></h1>
             <h3> I'm a <span>Web Developer</span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero iste quasi illum nam, inventore eum
                 exercitationem perspiciatis consequatur expedita consectetur porro tempore quidem fuga tenetur.</p>
