--- a/Portfolio-3/index.html
+++ b/Portfolio-3/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header class="header">
+        <a href="#home" class="logo">Raja <span>Shree</span></a>
+        <i class='bx bx-menu' id="menu-icon"></i>
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+    <section class="home" id="home">
+        <div class="home-img">
+            <img src="image.png" alt="">
+        </div>
+        <div class="home-content">
+            <h1>It's <span> Jonah</span></h1>
+            <h3 class="text-animation">
+                I'm a <span></span>
+            </h3>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae deleniti officia eveniet labore!
+                Consequatur exercitationem commodi quod nostrum est, soluta deserunt veritatis voluptas minima labore!
+            </p>
+
+            <div class="social-icons">
+                <a href=""><i class='bx bxl-linkedin-square' ></i></a>
+                <a href=""><i class='bx bxl-instagram-alt' ></i></a>
+                <a href=""><i class='bx bxl-facebook-square' ></i></a>
+                <a href=""><i class='bx bxl-twitter' ></i></a>
+            </div>
+            <a href="#" class="btn">Hire me</a>
+        </div>
+    </section>
 
 
     <script src="./script.js"></script>
 </body>
+
 </html>
