--- a/Portfolio-5/index.html
+++ b/Portfolio-5/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,99 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>PORTFOLIO</title>
 </head>
-<body>
-    
-   
-    
 
+<body>
+    <nav>
+        <a href="#" class="logo"><span>Linda</span></a>
+        <ul class="links">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+
+        </ul>
+
+        <i class='bx bx-menu-alt-right' id="menu"></i>
+        <a href="#contact" class="btn">Contact Me</a>
+    </nav>
+    <section id="home">
+        <img src="image2.png" alt="">
+        <div class="info-box">
+            <h1><span>Hello, I'm Linda</span></h1>
+            <h3><span>Web Developer</span>based in Toronto</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor laborum ipsam quod quasi, magni, hic,
+                officiis fugiat facilis sed deleniti maiores saepe impedit. Consequatur, doloremque.</p>
+
+        </div>
+        <div class="btn-box">
+            <div class="btn">Hire</div>
+            <div class="btn">Contact Me</div>
+        </div>
+
+    </section>
+    <section id="about">
+        <div class="about-box">
+
+            <div class="about-info">
+                <h1><span>About Me</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio non aliquid consequatur
+                    reiciendis omnis possimus consectetur, quasi, nobis qui nisi eligendi similique, ex atque iusto
+                    facilis quam enim sunt error.</p>
+
+            </div>
+            <h2><span>Skills</span></h2>
+            <div class="skills">
+                <ul>
+                    <li>
+                        <span> <i class='bx bx-chevron-right'></i>HTML</span>
+                    </li>
+                    <li>
+                        <span> <i class='bx bx-chevron-right'></i>css</span>
+                    </li>
+                    <li>
+                        <span> <i class='bx bx-chevron-right'></i>JAvascript</span>
+                    </li>
+
+                </ul>
+
+                <ul>
+                    <li>
+                        <span> <i class='bx bx-chevron-right'></i>Javascript</span>
+                    </li>
+                    <li>
+                        <span> <i class='bx bx-chevron-right'></i>React</span>
+                    </li>
+                    <li>
+                        <span> <i class='bx bx-chevron-right'></i>MySQL</span>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+        <img src="image2.png" alt="">
+    </section>
+<section id="services">
+    <h1 class="header"><span>Services</span></h1>
+    <div class="services-container">
+        <div class="box">
+            <h1><span>Web design</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate accusantium nobis.</p>
+            <img src="image3.png" alt="">
+        </div>
+
+            <div class="box">
+            <h1><span>Web design</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate accusantium nobis.</p>
+            <img src="image3.png" alt="">
+        </div>
+
+            <div class="box">
+            <h1><span>Web design</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate accusantium nobis.</p>
+            <img src="image3.png" alt="">
+        </div>
+    </div>
+</section>
 </body>
+
 </html>
