--- a/Portfolio-5/index.html
+++ b/Portfolio-5/index.html
@@ -80,28 +80,91 @@
         </div>
         <img src="image2.png" alt="">
     </section>
-<section id="services">
-    <h1 class="header"><span>Services</span></h1>
-    <div class="services-container">
-        <div class="box">
-            <h1><span>Web design</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate accusantium nobis.</p>
-            <img src="image3.png" alt="">
-        </div>
+    <section id="services">
+        <h1 class="header"><span>Services</span></h1>
+        <div class="services-container">
+            <div class="box">
+                <h1><span>Web design</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus
+                    perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate
+                    accusantium nobis.</p>
+                <img src="image3.png" alt="">
+            </div>
 
             <div class="box">
-            <h1><span>Web design</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate accusantium nobis.</p>
-            <img src="image3.png" alt="">
-        </div>
+                <h1><span>Web Developer</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus
+                    perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate
+                    accusantium nobis.</p>
+                <img src="image1.png" alt="">
+            </div>
 
             <div class="box">
-            <h1><span>Web design</span></h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate accusantium nobis.</p>
-            <img src="image3.png" alt="">
+                <h1><span>Graphic design</span></h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima temporibus cumque cum accusamus
+                    perferendis eaque deleniti odio iusto ab alias magni quidem officiis eum, natus nihil ut voluptate
+                    accusantium nobis.</p>
+                <img src="image4.png" alt="">
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+
+    <section id="contact">
+        <h1 class="header"> <span>Contact</span></h1>
+        <form action="#">
+            <div class="input-box">
+                <span>Full Name</span>
+                <input type="text" placeholder="Full Name">
+            </div>
+
+            <div class="input-box">
+                <span>Full Email</span>
+                <input type="text" placeholder="Enter Your Email">
+            </div>
+
+            <div class="input-box">
+                <span>Your Message</span>
+                <input type="text" placeholder="Enter Your Message">
+            </div>
+            <div class="btn">Submit</div>
+        </form>
+    </section>
+    <footer>
+        <div class="col-left">
+            <div class="col-box">
+                <span><i class='bx bxs-location-plus'></i></span>
+                <span>1234 Maple street springfield IL 62701</span>
+            </div>
+            <div class="col-box">
+                <span><i class='bx bxs-phone'></i></span>
+                <span>1234 567819 </span>
+            </div>
+
+            <div class="col-box">
+                <span><i class='bx bxs-envelope'></i></span>
+                <span>linda@gmail.com </span>
+            </div>
+
+        </div>
+        <div class="col-right">
+            <span>About My Services</span>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero quidem, minus necessitatibus omnis
+                molestias praesentium. Perferendis, ea reiciendis? Doloribus sapiente culpa voluptas debitis sunt
+                voluptatum.</p>
+            <div class="social-icons">
+                <span> <i class='bx bxl-facebook-square'></i>
+                </span>
+                <span> <i class='bx bxl-instagram-alt'></i>
+                </span>
+                <span> <i class='bx bxl-linkedin-square'></i>
+                </span>
+                <span> <i class='bx bxl-github'></i>
+                </span>
+            </div>
+        </div>
+
+    </footer>
+    <script src="./script.js"></script>
 </body>
 
 </html>
