--- a/Portfolio-6/index.html
+++ b/Portfolio-6/index.html
@@ -164,6 +164,9 @@
         </ul>
         <p class="copyright">@CoffeeSHOP  | All Rights Reserved</p>
     </footer>
+
+
+    <script src="./script.js"></script>
 </body>
 
 </html>
