--- a/coffee-shop/index.html
+++ b/coffee-shop/index.html
@@ -23,8 +23,12 @@
         </nav>
         <div class="icons">
             <div class="fas fa-search" id="search-btn"></div>
-            <div class="fas fa-search" id="search-btn"></div>
-
+            <div class="fas fa-shopping-cart" id="cart-btn"></div>
+            <div class="fas fa-bars" id="menu-btn"></div>
+        </div>
+        <div class="search-form">
+            <input type="search" id="search-box" placeholder="search here..."> 
+            <label for="search-box" class="fas fa-search"></label>
         </div>
     </header>
 
