--- a/coffee-shop/index.html
+++ b/coffee-shop/index.html
@@ -10,11 +10,11 @@
 <body>
     <header class="header">
         <a href="#" class="logo">
-            <img src="" alt="">
+            <img src="./image1.png" alt="">
         </a>
         <nav class="navbar">
             <a href="#home">home</a>
-            <a href="#home">about</a>
+            <a href="#about">about</a>
             <a href="#home">menu</a>
             <a href="#home">products</a>
             <a href="#home">review</a>
@@ -30,11 +30,68 @@
             <input type="search" id="search-box" placeholder="search here..."> 
             <label for="search-box" class="fas fa-search"></label>
         </div>
+        <div class="cart-items-container">
+            <div class="cart-item">
+                <span class="fas fa-times"></span>
+                <img src="./image1.png" alt="">
+                <div class="content">
+                    <h3>cart item 01</h3>
+                    <div class="price">$15.99/-</div>
+                </div>
+            </div>
+
+              <div class="cart-item">
+                <span class="fas fa-times"></span>
+                <img src="./image1.png" alt="">
+                <div class="content">
+                    <h3>cart item 01</h3>
+                    <div class="price">$15.99/-</div>
+                </div>
+            </div>
+              <div class="cart-item">
+                <span class="fas fa-times"></span>
+                <img src="./image1.png" alt="">
+                <div class="content">
+                    <h3>cart item 01</h3>
+                    <div class="price">$15.99/-</div>
+                </div>
+            </div>
+              <div class="cart-item">
+                <span class="fas fa-times"></span>
+                <img src="./image1.png" alt="">
+                <div class="content">
+                    <h3>cart item 01</h3>
+                    <div class="price">$15.99/-</div>
+                </div>
+            </div>
+            <a href="#" class="btn">checkout now</a>
+        </div>
     </header>
 
+<section class="home" id="home">
+    <div class="content">
+        <h3>Fresh coffee in the morning</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit officiis iure voluptatem blanditiis doloribus vero, architecto laboriosam. Odio alias quo dicta, modi cumque obcaecati. Pariatur vero voluptatem aut repellendus eius unde, tenetur ullam vitae. Eaque aliquid officiis inventore voluptas, quidem soluta eos vero provident! Optio?</p>
+        <a href="#" class="btn">Get Your Now</a>
+    </div>
 
+</section>
 
-
+<section class="about" id="about">
+    <h1 class="heading">
+        <span>about</span>us
+    </h1>
+    <div class="row">
+        <div class="image">
+            <img src="image1.png" alt="">
+        </div>
+        <div class="content">
+            <h3>What makes our coffee special?</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ad at hic sed autem numquam fuga iste velit nemo tenetur, sunt quibusdam ab exercitationem, aspernatur, ducimus officia optio odit. Quibusdam molestias eum repellat sapiente alias dicta totam labore obcaecati. Illum necessitatibus quam atque quasi inventore?</p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+    </div>
+</section>
 
 
 
