--- a/coffee-shop/index.html
+++ b/coffee-shop/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <title>Document</title>
 </head>
+
 <body>
     <header class="header">
         <a href="#" class="logo">
@@ -27,7 +29,7 @@
             <div class="fas fa-bars" id="menu-btn"></div>
         </div>
         <div class="search-form">
-            <input type="search" id="search-box" placeholder="search here..."> 
+            <input type="search" id="search-box" placeholder="search here...">
             <label for="search-box" class="fas fa-search"></label>
         </div>
         <div class="cart-items-container">
@@ -40,7 +42,7 @@
                 </div>
             </div>
 
-              <div class="cart-item">
+            <div class="cart-item">
                 <span class="fas fa-times"></span>
                 <img src="./image1.png" alt="">
                 <div class="content">
@@ -48,7 +50,7 @@
                     <div class="price">$15.99/-</div>
                 </div>
             </div>
-              <div class="cart-item">
+            <div class="cart-item">
                 <span class="fas fa-times"></span>
                 <img src="./image1.png" alt="">
                 <div class="content">
@@ -56,7 +58,7 @@
                     <div class="price">$15.99/-</div>
                 </div>
             </div>
-              <div class="cart-item">
+            <div class="cart-item">
                 <span class="fas fa-times"></span>
                 <img src="./image1.png" alt="">
                 <div class="content">
@@ -68,33 +70,219 @@
         </div>
     </header>
 
-<section class="home" id="home">
-    <div class="content">
-        <h3>Fresh coffee in the morning</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit officiis iure voluptatem blanditiis doloribus vero, architecto laboriosam. Odio alias quo dicta, modi cumque obcaecati. Pariatur vero voluptatem aut repellendus eius unde, tenetur ullam vitae. Eaque aliquid officiis inventore voluptas, quidem soluta eos vero provident! Optio?</p>
-        <a href="#" class="btn">Get Your Now</a>
-    </div>
-
-</section>
-
-<section class="about" id="about">
-    <h1 class="heading">
-        <span>about</span>us
-    </h1>
-    <div class="row">
-        <div class="image">
-            <img src="image1.png" alt="">
-        </div>
+    <section class="home" id="home">
         <div class="content">
-            <h3>What makes our coffee special?</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ad at hic sed autem numquam fuga iste velit nemo tenetur, sunt quibusdam ab exercitationem, aspernatur, ducimus officia optio odit. Quibusdam molestias eum repellat sapiente alias dicta totam labore obcaecati. Illum necessitatibus quam atque quasi inventore?</p>
-            <a href="#" class="btn">Learn More</a>
+            <h3>Fresh coffee in the morning</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit officiis iure voluptatem blanditiis
+                doloribus vero, architecto laboriosam. Odio alias quo dicta, modi cumque obcaecati. Pariatur vero
+                voluptatem aut repellendus eius unde, tenetur ullam vitae. Eaque aliquid officiis inventore voluptas,
+                quidem soluta eos vero provident! Optio?</p>
+            <a href="#" class="btn">Get Your Now</a>
         </div>
-    </div>
-</section>
+
+    </section>
+
+    <section class="about" id="about">
+        <h1 class="heading">
+            <span>about</span>us
+        </h1>
+        <div class="row">
+            <div class="image">
+                <img src="image1.png" alt="">
+            </div>
+            <div class="content">
+                <h3>What makes our coffee special?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae ad at hic sed autem numquam fuga iste
+                    velit nemo tenetur, sunt quibusdam ab exercitationem, aspernatur, ducimus officia optio odit.
+                    Quibusdam molestias eum repellat sapiente alias dicta totam labore obcaecati. Illum necessitatibus
+                    quam atque quasi inventore?</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
+        </div>
+    </section>
+    <section class="menu" id="menu">
+        <h1 class="heading">our <span>menu</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <img src="./image3.png" alt="">
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to card</a>
+            </div>
+
+            <div class="box">
+                <img src="./image1.png" alt="">
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to card</a>
+            </div>
+
+            <div class="box">
+                <img src="./image4.png" alt="">
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to card</a>
+            </div>
+
+            <div class="box">
+                <img src="./image3.png" alt="">
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to card</a>
+            </div>
+
+            <div class="box">
+                <img src="./image2.png" alt="">
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to card</a>
+            </div>
+
+            <div class="box">
+                <img src="./image4.png" alt="">
+                <h3>tasty and healthy</h3>
+                <div class="price">$15.99 <span>20.99</span></div>
+                <a href="#" class="btn">add to card</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="product" id="product">
+        <h1 class="heading">our <span>products</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <div class="icons">
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="./image3.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>Fresh coffee</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="price">$15.99 <span>$20.99</span></div>
+                </div>
+            </div>
+
+            <div class="box">
+                <div class="icons">
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="./image4.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>Fresh coffee</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="price">$15.99 <span>$20.99</span></div>
+                </div>
+            </div>
 
 
+            <div class="box">
+                <div class="icons">
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="./image4.png" alt="">
+                </div>
+                <div class="content">
+                    <h3>Fresh coffee</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <div class="price">$15.99 <span>$20.99</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="review" id="review">
+        <h1 class="heading">customer's <span>review</span></h1>
+        <div class="box-container">
+
+            <div class="box">
+                <img src="./image6.png" alt="" class="quote">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptates consequuntur? Maxime
+                    pariatur voluptas dolores nemo dignissimos illum est, molestias vitae incidunt quis. Quo sint
+                    necessitatibus minima impedit nostrum aut perspiciatis deleniti quis debitis accusamus blanditiis
+                    vitae, voluptas consequuntur quisquam explicabo voluptatum quia error! Iusto ratione ut excepturi
+                    dolorum harum?</p>
+                <img src="./image6.png" alt="" class="user">
+                <h3>john deo</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+             <div class="box">
+                <img src="./image6.png" alt="" class="quote">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, voluptates consequuntur? Maxime
+                    pariatur voluptas dolores nemo dignissimos illum est, molestias vitae incidunt quis. Quo sint
+                    necessitatibus minima impedit nostrum aut perspiciatis deleniti quis debitis accusamus blanditiis
+                    vitae, voluptas consequuntur quisquam explicabo voluptatum quia error! Iusto ratione ut excepturi
+                    dolorum harum?</p>
+                <img src="./image6.png" alt="" class="user">
+                <h3>john deo</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="contact" id="contact">
+        <h1 class="heading"><span>contact</span></h1>
+        <div class="row">
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29966.935775960636!2d86.03777622127616!3d20.13959670294724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a199afb6fbf7a39%3A0x439f49a98dd83d7f!2sNiali%2C%20Odisha!5e0!3m2!1sen!2sin!4v1763208029555!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       <form action="">
+        <h3>get in touch</h3>
+        <div class="inputBox">
+            <span class="fas fa-user"></span>
+            <input type="text" placeholder="name">
+        </div>
+          <div class="inputBox">
+            <span class="fas fa-envelope"></span>
+            <input type="email" placeholder="email">
+        </div>
+          <div class="inputBox">
+            <span class="fas fa-phone"></span>
+            <input type="number" placeholder="number">
+        </div>
+        <input type="submit" value="contact now" class="btn">
+       </form>
+       
+        </div>
+    </section>
+    
 
 
 
@@ -106,4 +294,5 @@
 
     <script src="./script.js"></script>
 </body>
+
 </html>
