coffee website finished

--- a/coffee-shop/index.html
+++ b/coffee-shop/index.html
@@ -17,11 +17,11 @@
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">about</a>
-            <a href="#home">menu</a>
-            <a href="#home">products</a>
-            <a href="#home">review</a>
-            <a href="#home">contact</a>
-            <a href="#home">blogs</a>
+            <a href="#menu">menu</a>
+            <a href="#product">product</a>
+            <a href="#review">review</a>
+            <a href="#contact">contact</a>
+            <a href="#blog">blogs</a>
         </nav>
         <div class="icons">
             <div class="fas fa-search" id="search-btn"></div>
@@ -282,9 +282,67 @@
        
         </div>
     </section>
-    
+    <section class="blog" id="blog">
+        <h1 class="heading">our <span>blogs</span></h1>
+        <div class="box-container">
+            <div class="box">
+                <div class="image">
+                    <img src="./image5.png" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">testy and refreshing coffee</a>
+                    <span>by admin / 21st may,2023</span>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non nulla consectetur quod magni accusantium commodi.</p>
+                    <a href="#" class="btn" >read more</a>
+                </div>
+            </div>
 
+            <div class="box">
+                <div class="image">
+                    <img src="./image3.png" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">testy and refreshing coffee</a>
+                    <span>by admin / 21st may,2023</span>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non nulla consectetur quod magni accusantium commodi.</p>
+                    <a href="#" class="btn" >read more</a>
+                </div>
+            </div>
 
+            <div class="box">
+                <div class="image">
+                    <img src="./image4.png" alt="">
+                </div>
+                <div class="content">
+                    <a href="#" class="title">testy and refreshing coffee</a>
+                    <span>by admin / 21st may,2023</span>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non nulla consectetur quod magni accusantium commodi.</p>
+                    <a href="#" class="btn" >read more</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+<section class="footer">
+
+    <div class="share">
+        <a href="#" class="fab fa-facebook"></a>
+        <a href="#" class="fab fa-twitter"></a>
+        <a href="#" class="fab fa-instagram"></a>
+        <a href="#" class="fab fa-linkedin"></a>
+        <a href="#" class="fab fa-pinterest"></a>
+ </div>
+ <div class="links">
+<a href="#home">home</a>
+<a href="#about">about</a>            
+<a href="#menu">menu</a>
+<a href="#product">products</a>
+<a href="#review">review</a>
+<a href="#contact">contact</a>
+<a href="#blog">blogs</a>
+</div>
+<div class="credit">created by <span>Mrs. Web designer</span> | all right reserved</div>
+</section>
 
 
 
