card off  foodi

--- a/food/index.html
+++ b/food/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <title>Foodio</title>
 </head>
 <body>
-    
+    <secion class="menu">
+        <div class="nav">
+            <div class="logo"><h1>Food<b>io</b></h1></div>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">Service</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Gallery</a></li>
+            </ul>
+            <div>
+                <input class="singin" type="submit" value="Sign In" name="singin">
+                <input class="singup" type="submit" value="Sign Up" name="singup">
+            </div>
+        </div>
+    </secion>
+    <section class="grrid">
+        <div class="content">
+            <div class="content-left">
+                <div class="info">
+                    <h2>Order Your Best <br> Food anytime</h2>
+                    <p>hey, Our delicious food is waiting for you, <br>
+                    we are always near to you with 
+                    </p>
+                </div>
+                <button>Explore Food</button>
+            </div>
+            <div class="content-right">
+                <img src="image1.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="category">
+        <div class="list-item">
+            <h3>Popular Dishes</h3>
+            <div class="card-list">
+                <div class="card">
+                    <img src="image2.png" alt="">
+                    <div class="food-title">
+                        <h1>Beef Burger</h1>
+                    </div>
+                    <div class="desc-food">
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus soluta et mollitia pariatur harum facere, repudiandae incidunt magnam velit. Vero!</p>
+                    </div>
+                    <div class="price">
+                        <span>$10.99</span> <span><i class='bx bxs-plus-circle'></i></span>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </section>
 </body>
 </html>
