food project end

--- a/food/index.html
+++ b/food/index.html
@@ -54,7 +54,46 @@
                         <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus soluta et mollitia pariatur harum facere, repudiandae incidunt magnam velit. Vero!</p>
                     </div>
                     <div class="price">
-                        <span>$10.99</span> <span><i class='bx bxs-plus-circle'></i></span>
+                        <span>$10.99</span> <span><i class='bx bxs-plus-circle plus-icon'></i></span>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="image2.png" alt="">
+                    <div class="food-title">
+                        <h1>Beef Burger</h1>
+                    </div>
+                    <div class="desc-food">
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus soluta et mollitia pariatur harum facere, repudiandae incidunt magnam velit. Vero!</p>
+                    </div>
+                    <div class="price">
+                        <span>$10.99</span> <span><i class='bx bxs-plus-circle plus-icon'></i></span>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="image2.png" alt="">
+                    <div class="food-title">
+                        <h1>Beef Burger</h1>
+                    </div>
+                    <div class="desc-food">
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus soluta et mollitia pariatur harum facere, repudiandae incidunt magnam velit. Vero!</p>
+                    </div>
+                    <div class="price">
+                        <span>$10.99</span> <span><i class='bx bxs-plus-circle plus-icon'></i></span>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="image2.png" alt="">
+                    <div class="food-title">
+                        <h1>Beef Burger</h1>
+                    </div>
+                    <div class="desc-food">
+                        <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus soluta et mollitia pariatur harum facere, repudiandae incidunt magnam velit. Vero!</p>
+                    </div>
+                    <div class="price">
+                        <span>$10.99</span> <span><i class='bx bxs-plus-circle plus-icon'></i></span>
                     </div>
                 </div>
             </div>
